--- a/templates/expenses/expense_dash.html
+++ b/templates/expenses/expense_dash.html
@@ -58,6 +58,10 @@
         font-size: 1.2rem;
     }
 </style>
+<div class="container-fluid py-4 fade-in">
+     <a href="{{ url_for('reports') }}" class="btn btn-light btn-sm rounded-pill px-3 border shadow-sm ms-2 fw-bold">
+                <i class="fa-solid fa-arrow-left me-2"></i>Back
+            </a>
 
 <div class="container-fluid py-4 fade-in-up">
     <!-- Top Header -->
@@ -262,3 +266,4 @@
     });
 </script>
 {% endblock %}
+
